stop email submenu being cut off

--- a/app/stylesheets/forms/_email.scss
+++ b/app/stylesheets/forms/_email.scss
@@ -626,7 +626,6 @@
 }
 
 .email-form-component {
-  overflow-x: hidden;
   margin-top: 66px;
   border: 1px solid $border;
 
